Set up player agent with mouse click control
Set up enemy agent with a constructed decision tree, leaf actions are just missing functionality

Need to:
- construct map class of nodes
- implement pathfinding for AI
- implement functionality for leaf nodes
- implement resources, resource gathering and army building

--- a/RaylibStarterCPP/RaylibStarterCPP.vcxproj
+++ b/RaylibStarterCPP/RaylibStarterCPP.vcxproj
@@ -19,11 +19,21 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Agent.cpp" />
+    <ClCompile Include="source\EnemyAgent.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\MathsClasses.cpp" />
+    <ClCompile Include="source\MouseFollowBehaviour.cpp" />
+    <ClCompile Include="source\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Agent.h" />
+    <ClInclude Include="source\Behaviour.h" />
+    <ClInclude Include="source\DecisionTree.h" />
+    <ClInclude Include="source\EnemyAgent.h" />
     <ClInclude Include="source\MathsClasses.h" />
+    <ClInclude Include="source\MouseFollowBehaviour.h" />
+    <ClInclude Include="source\Player.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
