--- a/RaylibStarterCPP/RaylibStarterCPP.vcxproj
+++ b/RaylibStarterCPP/RaylibStarterCPP.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\MathsClasses.cpp" />
     <ClCompile Include="source\Player.cpp" />
+    <ClCompile Include="source\Resource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Agent.h" />
@@ -33,9 +34,11 @@
     <ClInclude Include="source\DecisionTree.h" />
     <ClInclude Include="source\Edge.h" />
     <ClInclude Include="source\EnemyAgent.h" />
+    <ClInclude Include="source\GameObject.h" />
     <ClInclude Include="source\Grid.h" />
     <ClInclude Include="source\MathsClasses.h" />
     <ClInclude Include="source\Player.h" />
+    <ClInclude Include="source\Resource.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
