--- a/RaylibStarterCPP/RaylibStarterCPP.vcxproj.filters
+++ b/RaylibStarterCPP/RaylibStarterCPP.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="source\Cell.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\SearchWaypoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\MathsClasses.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\GameManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\SearchWaypoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
